Src/sqlite3win32stubs.bas

Attribute VB_Name = "sqlite3win32stubs"
Option Explicit
Private Declare Function sqlite3_aggregate_context Lib "sqlite3win32.dll" (ByVal pCtx As Long, ByVal nBytes As Long) As Long
Private Declare Function sqlite3_aggregate_count Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_auto_extension Lib "sqlite3win32.dll" (ByVal xEntryPoint As Long) As Long
Private Declare Function sqlite3_backup_finish Lib "sqlite3win32.dll" (ByVal pBak As Long) As Long
Private Declare Function sqlite3_backup_init Lib "sqlite3win32.dll" (ByVal pDest As Long, ByVal pzDestName As Long, ByVal pSrc As Long, ByVal pzSrcName As Long) As Long
Private Declare Function sqlite3_backup_pagecount Lib "sqlite3win32.dll" (ByVal pBak As Long) As Long
Private Declare Function sqlite3_backup_remaining Lib "sqlite3win32.dll" (ByVal pBak As Long) As Long
Private Declare Function sqlite3_backup_step Lib "sqlite3win32.dll" (ByVal pBak As Long, ByVal nPage As Long) As Long
Private Declare Function sqlite3_bind_blob Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_bind_blob64 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Currency, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_bind_double Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal rValue As Double) As Long
Private Declare Function sqlite3_bind_int Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal iValue As Long) As Long
Private Declare Function sqlite3_bind_int64 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal iValue As Currency) As Long
Private Declare Function sqlite3_bind_null Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long) As Long
Private Declare Function sqlite3_bind_parameter_count Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_bind_parameter_index Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal pzName As Long) As Long
Private Declare Function sqlite3_bind_parameter_name Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long) As Long
Private Declare Function sqlite3_bind_pointer Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pPtr As Long, ByVal pzPType As Long, ByVal lpfnDestroy As Long)
Private Declare Function sqlite3_bind_text Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_bind_text16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_bind_text64 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pzData As Long, ByVal nData As Currency, ByVal lpfnDestroy As Long, ByVal Encoding As Byte) As Long
Private Declare Function sqlite3_bind_value Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal pValue As Long) As Long
Private Declare Function sqlite3_bind_zeroblob Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal n As Long) As Long
Private Declare Function sqlite3_bind_zeroblob64 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long, ByVal n As Currency) As Long
Private Declare Function sqlite3_blob_bytes Lib "sqlite3win32.dll" (ByVal pBlob As Long) As Long
Private Declare Function sqlite3_blob_close Lib "sqlite3win32.dll" (ByVal pBlob As Long) As Long
Private Declare Function sqlite3_blob_open Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDB As Long, ByVal pzTable As Long, ByVal pzColumn As Long, ByVal iRow As Currency, ByVal Flags As Long, ByRef pBlob As Long) As Long
Private Declare Function sqlite3_blob_read Lib "sqlite3win32.dll" (ByVal pBlob As Long, ByVal pz As Long, ByVal n As Long, ByVal iOffset As Long) As Long
Private Declare Function sqlite3_blob_reopen Lib "sqlite3win32.dll" (ByVal pBlob As Long, ByVal iRow As Currency) As Long
Private Declare Function sqlite3_blob_write Lib "sqlite3win32.dll" (ByVal pBlob As Long, ByVal pz As Long, ByVal n As Long, ByVal iOffset As Long) As Long
Private Declare Function sqlite3_busy_handler Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal xBusy As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_busy_timeout Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal dwMilliseconds As Long) As Long
Private Declare Function sqlite3_cancel_auto_extension Lib "sqlite3win32.dll" (ByVal xEntryPoint As Long) As Long
Private Declare Function sqlite3_changes Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_clear_bindings Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_close Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_close_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_collation_needed Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pCollNeededArg As Long, ByVal xCollNeeded As Long) As Long
Private Declare Function sqlite3_collation_needed16 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pCollNeededArg As Long, ByVal xCollNeeded16 As Long) As Long
Private Declare Function sqlite3_column_blob Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long) As Long
Private Declare Function sqlite3_column_bytes Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long) As Long
Private Declare Function sqlite3_column_bytes16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal i As Long) As Long
Private Declare Function sqlite3_column_count Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_column_database_name Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_database_name16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_decltype Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_decltype16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_double Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Double
Private Declare Function sqlite3_column_int Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_int64 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Currency
Private Declare Function sqlite3_column_name Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_name16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_origin_name Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_origin_name16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_table_name Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_table_name16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_text Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_text16 Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_type Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_column_value Lib "sqlite3win32.dll" (ByVal hStmt As Long, ByVal iCol As Long) As Long
Private Declare Function sqlite3_commit_hook Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal lpfnCallback As Long, ByVal pArg As Long) As Long
Private Declare Function sqlite3_compileoption_get Lib "sqlite3win32.dll" (ByVal n As Long) As Long
Private Declare Function sqlite3_compileoption_used Lib "sqlite3win32.dll" (ByVal pzOptName As Long) As Long
Private Declare Function sqlite3_complete Lib "sqlite3win32.dll" (ByVal pzSQL As Long) As Long
Private Declare Function sqlite3_complete16 Lib "sqlite3win32.dll" (ByVal pzSQL As Long) As Long
Private Declare Function sqlite3_context_db_handle Lib "sqlite3win32.dll" (ByVal pCtx As Long) As Long
Private Declare Function sqlite3_create_collation Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal eTextRep As Long, ByVal pArg As Long, ByVal lpfnCompare As Long) As Long
Private Declare Function sqlite3_create_collation_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal eTextRep As Long, ByVal pArg As Long, ByVal lpfnCompare As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_create_collation16 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal eTextRep As Long, ByVal pArg As Long, ByVal lpfnCompare As Long) As Long
Private Declare Function sqlite3_create_function Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzFunc As Long, ByVal nArg As Long, ByVal eTextRep As Long, ByVal pApp As Long, ByVal lpfnFunc As Long, ByVal lpfnStep As Long, ByVal lpfnFinal As Long) As Long
Private Declare Function sqlite3_create_function_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzFunc As Long, ByVal nArg As Long, ByVal eTextRep As Long, ByVal pApp As Long, ByVal lpfnFunc As Long, ByVal lpfnStep As Long, ByVal lpfnFinal As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_create_function16 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzFunctionName As Long, ByVal nArg As Long, ByVal eTextRep As Long, ByVal pApp As Long, ByVal lpfnFunc As Long, ByVal lpfnStep As Long, ByVal lpfnFinal As Long) As Long
Private Declare Function sqlite3_create_module Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal pModule As Long, ByVal pAux As Long) As Long
Private Declare Function sqlite3_create_module_v2 Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzName As Long, ByVal pModule As Long, ByVal pAux As Long, ByVal lpfnDestroy As Long) As Long
Private Declare Function sqlite3_data_count Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_db_cacheflush Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_db_filename Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDbName As Long) As Long
Private Declare Function sqlite3_db_handle Lib "sqlite3win32.dll" (ByVal hStmt As Long) As Long
Private Declare Function sqlite3_db_mutex Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_db_readonly Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzDbName As Long) As Long
Private Declare Function sqlite3_db_release_memory Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_db_status Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal StatusOpt As Long, ByVal pCurrent As Long, ByVal pHighwater As Long, ByVal ResetFlag As Long) As Long
Private Declare Function sqlite3_declare_vtab Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal pzCreateTable As Long) As Long
Private Declare Function sqlite3_enable_load_extension Lib "sqlite3win32.dll" (ByVal hDB As Long, ByVal iOnOff As Long) As Long
Private Declare Function sqlite3_enable_shared_cache Lib "sqlite3win32.dll" (ByVal fEnable As Long) As Long
Private Declare Function sqlite3_errcode Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_errmsg Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
Private Declare Function sqlite3_errmsg16 Lib "sqlite3win32.dll" (ByVal hDB As Long) As Long
